--- a/confidence.html
+++ b/confidence.html
@@ -2,194 +2,154 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Confidence Portfolio</title>
 </head>
 
 <body>
-    <img width="200px"
-        src="https://res.cloudinary.com/zara2107/image/upload/v1566674901/Screenshot_20190824-202535_vw8l6k.png"
-        alt="Confidence Zara's Pic">
-    <div>
-        <table>
-            <tr>
-                <td>
-                    <h1>EZEOCHA CONFIDENCE CHIZARAM</h1>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <address>41,Abata Street,Orile Iganmu</address>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <address>Lagos, Nigeria</address>
-                </td>
-            </tr>
-
-            <tr>
-                <td><a href="Tel:08163107917">Tel: 08163107917</a></td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a href="Email: confiezara21@gmail.com">Email: confiezara21@gmail.com</a>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td>
-                    <a
-                        href="https://www.linkedin.com/n/confidence-ezeocha-2b3449147">Linkedin:https://www.linkedin.com/n/confidence-ezeocha-2b3449147</a>
-                </td>
-            </tr>
-
-        </table>
+    <div class="img-box">
+        <img width="200px"
+            src="https://res.cloudinary.com/zara2107/image/upload/v1566674901/Screenshot_20190824-202535_vw8l6k.png"
+            alt="Confidence Zara's Pic">
     </div>
 
-    <div>
-        <h2>CAREER OBJECTIVE</h2>
-        <p>I am seeking to join a team of professionals in a challenging, dynamic and competitive organization where I
-            can learn on the job, gain relevant experiences and effectively contribute towards achieving organizational
-            set targets & objectives for optimum productivity and professional development.</p>
-        <p>I am a high-performance Biochemistry Graduate with great experience in Tech, Sales, Marketing and Real
-            Estate. I possess a very good English Language Proficiency (both spoken & written) with effective
-            communication skills. I am competent at handling multiple task & executing any given job within a specific
-            timeline. Above all, I am focused & very will-coordinated when working under pressure.</p>
-    </div>
 
-    <div>
-        <h2>
-            CORE COMPETENCES
-        </h2>
-
-        <ul>
-            <li>
-                Team Work / Critical Thinking
-            </li>
-            <li>
-                Emotional Intelligence
-            </li>
-            <li>
-                Complex Problem Solving 
-            </li>
-            <li>
-                Effective Communication 
-            </li>
-            <li>
-                People Management
-            </li>
-            <li>
-                Negotiation/Decision Making 
-            </li>
-            <li>
-                Result Driven/Self-motivated
-            </li>
-            <li>
-                Sales & Marketing / Real Estate
-            </li>
-        </ul>
-
-    </div>
-
-    <div>
-        <h2>EXPERIENCE</h2>
-
+    <!--HEADER-->
+    <header>
+        <h1>EZEOCHA CONFIDENCE CHIZARAM</h1>
         <p>
-            <strong>SERIOUSMATA,</strong> Lekki<em>- Social Media Manager</em>
+            <address>41, Abata Street, Orile Iganmu</address>
         </p>
-
-        <p>Sept 2018- May 2019</p>
-
-        <h3>Key Roles</h3>
-
-        <ol>
-            <li>
-                Develop relevant content topics to reach company’s target customers 
-            </li>
-            <li>Create, Curate and manage all published content (images, Video e.t.c
-            </li>
-            <li>Monitor, listen and respond to users in a “social” way while cultivating leads and sales. 
-            </li>
-            <li>Design create and manage promotions and social ads campaigns. </li>
-
-            <li>Analyze key metrics and tweak strategy as needed.</li>
-
-            <li>Monitor Trends in social media tools, Application, Strategy and Design.</li>
-        </ol>
-    </div>
-
-    <div>
-
         <p>
-            <strong>JUMIA,</strong> Lagos <em> -Sales Consultant</em>
+            <address>Lagos, Nigeria</address>
         </p>
+        <p><a href="Tel:08163107917">Tel: 08163107917</a></p>
+        <p><a href="Email: confiezara21@gmail.com">Email: confiezara21@gmail.com</a></p>
+        <a
+            href="https://www.linkedin.com/n/confidence-ezeocha-2b3449147">Linkedin:https://www.linkedin.com/n/confidence-ezeocha-2b3449147</a>
+    </header>
+    <main>
+        <!--CAREER OBJ-->
+        <div class="section">
+            <h2>CAREER OBJECTIVE</h2>
+            <p>I am seeking to join a team of professionals in a challenging, dynamic and competitive organization where
+                I
+                can learn on the job, gain relevant experiences and effectively contribute towards achieving
+                organizational
+                set targets & objectives for optimum productivity and professional development.</p>
+            <p>I am a high-performance Biochemistry Graduate with great experience in Tech, Sales, Marketing and Real
+                Estate. I possess a very good English Language Proficiency (both spoken & written) with effective
+                communication skills. I am competent at handling multiple task & executing any given job within a
+                specific
+                timeline. Above all, I am focused & very will-coordinated when working under pressure.</p>
+        </div>
 
-        <p>Aug 2015- July 2019</p>
+        <!--COMPETENCIES-->
+        <div class="section">
+            <h2>CORE COMPETENCES</h2>
+            <ul>
+                <li>Team Work / Critical Thinking</li>
+                <li>Emotional Intelligence</li>
+                <li>Complex Problem Solving </li>
+                <li>Effective Communication </li>
+                <li>People Management</li>
+                <li>Negotiation/Decision Making </li>
+                <li>Result Driven/Self-motivated</li>
+                <li>Sales & Marketing / Real Estate</li>
+            </ul>
+        </div>
 
-        <h3>Key Roles</h3>
+        <!--EXPERIENCES-->
+        <div class="section">
+            <h2>EXPERIENCE</h2>
+            <!--Exp 1-->
+            <div>
+                <h3>SERIOUSMATA</h3>
+                <p> Lekki<em>- Social Media Manager</em></p>
+                <p>Sept 2018- May 2019</p>
+                <h4>Key Roles</h4>
+                <ul>
+                    <li>Develop relevant content topics to reach company’s target customers </li>
+                    <li>Create, Curate and manage all published content (images, Video e.t.c)</li>
+                    <li>Monitor, listen and respond to users in a “social” way while cultivating leads and sales.</li>
+                    <li>Design create and manage promotions and social ads campaigns. </li>
+                    <li>Analyze key metrics and tweak strategy as needed.</li>
+                    <li>Monitor Trends in social media tools, Application, Strategy and Design.</li>
+                </ul>
+            </div>
 
-        <ol>
-            <li>
-                Responsible for generating sales through online and offline medium.</li>
+            <!--Exp 2-->
+            <div>
+                <h3>JUMIA</h3>
+                <p>Lagos <em> -Sales Consultant</em></p>
+                <p>Aug 2015- July 2019</p>
+                <h4>Key Roles</h4>
+                <ul>
+                    <li>Responsible for generating sales through online and offline medium.</li>
+                    <li>Provision of first-class sales by answering any question a client has.</li>
+                    <li>Acts as an expert in selling goods to clients that meet their desires.</li>
+                </ul>
+            </div>
+        </div>
 
-            <li>Provision of first-class sales by answering any question a client has.</li>
+        <div class="section">
+            <!--EDU-->
+            <h2>EDUCATION</h2>
+            <!--School 1-->
+            <div>
+                <h3>Federal University Of Technology Owerri</h3>
+                <p>Imo state</p>
+                <p>Second Class Upper</p>
+                <p>B.Tech. Biochemistry </p>
+                <p>Jan 2012 - Nov 2017</p>
+            </div>
+        </div>
 
-            <li>Acts as an expert in selling goods to clients that meet their desires.
-            </li>
-        </ol>
-    </div>
+        <!--CERTS-->
+        <div class="section">
+            <h2>TRAININGS/CERTIFICATIONS</h2>
+            <!--Cert 1-->
+            <ul>
+                <li>Certificate of National Service</li>
+                <li>National Youth Service Corps (NYSC)</li>
+                <li>Mar. 2018 – Mar. 2019.</li>
+            </ul>
 
-    <div>
-        <h2>EDUCATION</h2>
-        <table>
-            <tr>
-                <td>
-                    Federal University Of Technology, Owerri. Imo state - Second Class Upper</td>
-                <td>B.Tech. Biochemistry </td>
-                <td>Jan 2012 - Nov 2017</td>
-            </tr>
+            <!--Cert 2-->
+            <ul>
+                <li>Certificate of Sustainable Development Goals Advocacy Project</li>
+                <li>March-2019.</li>
+            </ul>
 
-        </table>
-    </div>
+            <!--Cert 3-->
+            <ul>
+                <li>Certificate of Completion, Digital Marketing Course, at www.digitaldeepak.com 2017.</li>
+                <li>Certificate of Proficiency, Human Resource & Skill Acquisition, HOREBSO Resources, April 2016.</li>
+            </ul>
+        </div>
 
-    <div>
-        <h2>TRAININGS/CERTIFICATIONS</h2>
-        <ul>
-            <li>Certificate of National Service, National Youth Service Corps (NYSC), Mar. 2018 – Mar. 2019.</li><br />
+        <!--LEADERSIP-->
+        <div class="section">
+            <h2>LEADERSHIP ROLES</h2>
+            <ul>
+                <li>Assistant Project Head, Funding & Partnership Unit,ENACTUS, 2017.</li>
+                <li>Treasurer, Nigerian Society of Biochemistry Student (NSBS), FUTO‘15/’16.</li>
+            </ul>
+        </div>
 
-            <li>Certificate of Sustainable Development Goals Advocacy Project, March-2019.</li><br />
+        <!--AWARDS-->
+        <div class="section">
+            <h2>AWARD & HONOURS</h2>
+            <ul>
+                <li>Award of Bronze to Gold (Double) Promotion as Jumia Sales Consultant, 2016.</li>
+                <li>Award of Honour as Icon of Confidence, NSBS FUTO, 2014.</li>
+            </ul>
+        </div>
 
-            <li>Certificate of Completion, Digital Marketing Course, at www.digitaldeepak.com, 2017.</li><br />
-
-            <li>Certificate of Proficiency, Human Resource & Skill Acquisition,HOREBSON Resources, April 2016.
-            </li>
-        </ul>
-    </div>
-
-    <div>
-        <h2>LEADERSHIP ROLES</h2>
-        <ul>
-            <li>
-                Assistant Project Head, Funding & Partnership Unit,ENACTUS, 2017.</li><br />
-
-            <li>Treasurer, Nigerian Society of Biochemistry Student (NSBS), FUTO‘15/’16.</li><br />
-    </div>
-
-    <div>
-        <h2>AWARD & HONOURS</h2>
-
-        <ul>
-            <li>
-                Award of Bronze to Gold (Double) Promotion as Jumia Sales Consultant, 2016.</li>
-
-            <li>Award of Honour as Icon of Confidence, NSBS FUTO, 2014.
-            </li>
-        </ul>
-    </div>
+    </main>
 </body>
 
 </html>
