--- a/confidence.html
+++ b/confidence.html
@@ -149,7 +149,36 @@
             </ul>
         </div>
 
+
+
+        <div class="wrapper">
+            <h2>Contact us</h2>
+
+            <form id="myform" onsubmit="return validate();">
+                <div class="input-container">
+                    <div class="input_field">
+                        <input type="text" placeholder="Name" id="name">
+                    </div>
+                    <div class="input_field">
+                        <input type="text" placeholder="Title" id="subject">
+                    </div>
+                    <div class="input_field">
+                        <input type="text" placeholder="Email" id="email">
+                    </div>
+                    <div class="input_field">
+                        <textarea placeholder="Message" id="message"></textarea>
+                    </div>
+
+                    <input type="submit" value="Submit">
+
+                </div>
+            </form>
+        </div>
     </main>
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
